--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
     <string name="app_name">ChatGPT</string>
     <string name="chatgpt_menu_new_chat">New chat</string>
+    <string name="chatgpt_menu_settings">Settings</string>
+
     <string name="chatgpt_ask">Ask</string>
     <string name="chatgpt_query">Query</string>
+
+    <string name="chatgpt_change_api_key">Change API key</string>
+    <string name="chatgpt_set_api_key">Set API key</string>
+    <string name="chatgpt_no_api_key">No API key set</string>
+    <string name="chatgpt_invalid_api_key">Invalid API key</string>
+
     <string name="chatgpt_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
     <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
 </resources>
