--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">ChatGPT</string>
     <string name="chatgpt_menu_new_chat">New chat</string>
     <string name="chatgpt_menu_settings">Settings</string>
+    <string name="chatgpt_menu_about">About</string>
 
     <string name="chatgpt_ask">Ask</string>
     <string name="chatgpt_query">Query</string>
@@ -13,4 +14,6 @@
 
     <string name="chatgpt_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
     <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
+
+    <string name="chatgpt_about">ChatGPT 1.0\n\n© 2023 Jannis Zahn</string>
 </resources>
