--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">ChatGPT</string>
     <string name="chatgpt_menu_new_chat">New chat</string>
+    <string name="chatgpt_menu_saved_chats">Saved chats</string>
     <string name="chatgpt_menu_settings">Settings</string>
     <string name="chatgpt_menu_about">About</string>
 
@@ -17,4 +18,5 @@
     <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
 
     <string name="chatgpt_about">ChatGPT 1.0\n\n© 2023 Jannis Zahn</string>
+    <string name="chatgpt_no_saved_chats">You haven\'t saved any chats yet. Touch the Save-Button in a new chat to save.</string>
 </resources>
