--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="chatgpt_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
     <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
 
-    <string name="chatgpt_about">ChatGPT 1.0\n\n© 2023 Jannis Zahn</string>
+    <string name="chatgpt_about" formatted="false">ChatGPT %1$s\n\n© 2023 Jannis Zahn</string>
     <string name="chatgpt_no_saved_chats">You haven\'t saved any chats yet. Touch the Save-Button in a new chat to save.</string>
 </resources>
