--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="chatgpt_set_api_key">Set API key</string>
     <string name="chatgpt_no_api_key">No API key set</string>
     <string name="chatgpt_invalid_api_key">Invalid API key</string>
+    <string name="chatgpt_invalid_api_key_message">The API key you entered is invalid. Go to the settings and check the API Key you provided.</string>
 
     <string name="chatgpt_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
     <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
