some preferences design changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="chatgpt_about" formatted="false">ChatGPT %1$s\n© 2023 Jannis Zahn</string>
     <string name="chatgpt_total_cost" formatted="false">Total cost: %1$s $</string>
     <string name="chatgpt_reset_cost_message">Reset total cost</string>
+
+    <string name="chatgpt_okay">OK</string>
+    <string name="chatgpt_cancel">Cancel</string>
 </resources>
