--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -25,4 +25,5 @@
     <string name="chatgpt_reset_cost_message">Verbrauch zurücksetzen</string>
     <string name="chatgpt_okay">OK</string>
     <string name="chatgpt_cancel">Abbrechen</string>
+    <string name="chatgpt_system_query">Definiere die Rolle</string>
 </resources>
