assistant role is hidden by default

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -26,4 +26,5 @@
     <string name="chatgpt_okay">OK</string>
     <string name="chatgpt_cancel">Abbrechen</string>
     <string name="chatgpt_system_query">Definiere die Rolle</string>
+    <string name="chatgpt_click_to_reveal">Klicke zum Anzeigen</string>
 </resources>
