--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,38 +1,38 @@
 <resources>
-    <string name="app_name" translatable="false">ChatGPT</string>
-    <string name="chatgpt_menu_new_chat">New chat</string>
-    <string name="chatgpt_menu_saved_chats">Saved chats</string>
-    <string name="chatgpt_menu_settings">Settings</string>
-    <string name="chatgpt_menu_about">About</string>
+    <string name="app_name" translatable="false">WristAssist</string>
+    <string name="wristassist_menu_new_chat">New chat</string>
+    <string name="wristassist_menu_saved_chats">Saved chats</string>
+    <string name="wristassist_menu_settings">Settings</string>
+    <string name="wristassist_menu_about">About</string>
 
-    <string name="chatgpt_query">Query</string>
-    <string name="chatgpt_ask_title">Set a chat title</string>
-    <string name="chatgpt_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
-    <string name="chatgpt_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
-    <string name="chatgpt_invalid_api_key_message">The API key you entered is invalid. Go to the settings and check the API Key you provided.</string>
+    <string name="wristassist_query">Query</string>
+    <string name="wristassist_ask_title">Set a chat title</string>
+    <string name="wristassist_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
+    <string name="wristassist_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
+    <string name="wristassist_invalid_api_key_message">The API key you entered is invalid. Go to the settings and check the API Key you provided.</string>
 
-    <string name="chatgpt_no_saved_chats">You haven\'t saved any chats yet.\nTouch the Save-Button in a new chat to save.</string>
+    <string name="wristassist_no_saved_chats">You haven\'t saved any chats yet.\nTouch the Save-Button in a new chat to save.</string>
 
-    <string name="chatgpt_change_api_key">Change API key</string>
-    <string name="chatgpt_no_api_key">No API key set</string>
-    <string name="chatgpt_select_api_host">Select API host</string>
-    <string name="chatgpt_select_api_host_message">Select the API host for ChatGPT</string>
-    <string name="chatgpt_vibrate">Vibrate</string>
-    <string name="chatgpt_vibrate_message">Vibrate when an answer appears</string>
-    <string name="chatgpt_font_size">Font size</string>
-    <string name="chatgpt_show_cost">Show cost</string>
-    <string name="chatgpt_show_cost_message">Show the cost for each answer</string>
-    <string name="chatgpt_select_model">Select GPT model</string>
-    <string name="chatgpt_select_model_message">Select the GPT model for all chat conversations</string>
+    <string name="wristassist_change_api_key">Change API key</string>
+    <string name="wristassist_no_api_key">No API key set</string>
+    <string name="wristassist_select_api_host">Select API host</string>
+    <string name="wristassist_select_api_host_message">Select the API host for ChatGPT</string>
+    <string name="wristassist_vibrate">Vibrate</string>
+    <string name="wristassist_vibrate_message">Vibrate when an answer appears</string>
+    <string name="wristassist_font_size">Font size</string>
+    <string name="wristassist_show_cost">Show cost</string>
+    <string name="wristassist_show_cost_message">Show the cost for each answer</string>
+    <string name="wristassist_select_model">Select GPT model</string>
+    <string name="wristassist_select_model_message">Select the GPT model for all chat conversations</string>
 
-    <string name="chatgpt_about" formatted="false" translatable="false">ChatGPT %1$s\n© 2023 Jannis Zahn</string>
-    <string name="chatgpt_total_cost" formatted="false">Total cost: %1$s k</string>
-    <string name="chatgpt_reset_cost_message">Reset total cost</string>
+    <string name="wristassist_about" formatted="false" translatable="false">WristAssist %1$s\n© 2023 Jannis Zahn</string>
+    <string name="wristassist_total_cost" formatted="false">Total cost: %1$s k</string>
+    <string name="wristassist_reset_cost_message">Reset total cost</string>
 
-    <string name="chatgpt_okay">OK</string>
-    <string name="chatgpt_cancel">Cancel</string>
-    <string name="chatgpt_system_query">Define the role</string>
-    <string name="chatgpt_click_to_reveal">Click to reveal</string>
-    <string name="chatgpt_last_edit" formatted="false">Last edit:\n%1$s</string>
-    <string name="chatgpt_chat_cost" formatted="false">Chat cost:\n%1$s k</string>
+    <string name="wristassist_okay">OK</string>
+    <string name="wristassist_cancel">Cancel</string>
+    <string name="wristassist_system_query">Define the role</string>
+    <string name="wristassist_click_to_reveal">Click to reveal</string>
+    <string name="wristassist_last_edit" formatted="false">Last edit:\n%1$s</string>
+    <string name="wristassist_chat_cost" formatted="false">Chat cost:\n%1$s k</string>
 </resources>
