--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -29,4 +29,6 @@
     <string name="wristassist_click_to_reveal">Klicke zum Anzeigen</string>
     <string name="wristassist_last_edit" formatted="false">Letzte Änderung:\n%1$s</string>
     <string name="wristassist_chat_cost" formatted="false">Chat Verbrauch:\n%1$s k</string>
+    <string name="wristassist_welcome">Willkommen bei\nWristAssist</string>
+    <string name="wristassist_welcome_info">Bitte scanne den QR-Code, um Anweisungen zur Einrichtung und Nutzung von WristAssist zu erhalten.</string>
 </resources>
