--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,7 @@
     <string name="wristassist_click_to_reveal">Click to reveal</string>
     <string name="wristassist_last_edit" formatted="false">Last edit:\n%1$s</string>
     <string name="wristassist_chat_cost" formatted="false">Chat cost:\n%1$s k</string>
+
+    <string name="wristassist_welcome">Welcome to\nWristAssist</string>
+    <string name="wristassist_welcome_info">Please scan the QR code for instructions on how to set up and use WristAssist.</string>
 </resources>
