--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -31,4 +31,10 @@
     <string name="wristassist_chat_cost" formatted="false">Chat Verbrauch:\n%1$s k</string>
     <string name="wristassist_welcome">Willkommen bei\nWristAssist</string>
     <string name="wristassist_welcome_info">Bitte scanne den QR-Code, um Anweisungen zur Einrichtung und Nutzung von WristAssist zu erhalten.</string>
+    <string name="wristassist_gpt_settings">GPT Einstellungen</string>
+    <string name="wristassist_chat_settings">Chat Einstellungen</string>
+    <string name="wristassist_tts_settings">TTS Einstellungen</string>
+    <string name="wristassist_tts">TTS</string>
+    <string name="wristassist_tts_message">Lies die Nachricht laut vor</string>
+    <string name="wristassist_tts_volume">TTS Lautstärke</string>
 </resources>
