--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -36,4 +36,6 @@
     <string name="wristassist_tts_volume">TTS Lautstärke</string>
     <string name="wristassist_tts_lang_not_available">TTS-Sprache nicht verfügbar. Download in den Einstellungen.</string>
     <string name="wristassist_tts_not_available">Verbindung zur TTS-Engine konnte nicht hergestellt werden.</string>
+    <string name="wristassist_auto_tts">Auto TTS</string>
+    <string name="wristassist_auto_tts_message">Antwort automatisch laut vorlesen</string>
 </resources>
