--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,8 @@
     <string name="wristassist_tts">TTS</string>
     <string name="wristassist_tts_message">Read the answer out loud</string>
     <string name="wristassist_tts_volume">TTS volume</string>
+    <string name="wristassist_auto_tts">Auto TTS</string>
+    <string name="wristassist_auto_tts_message">Automatically read the answer out loud</string>
     <string name="wristassist_tts_lang_not_available">TTS language not available. Download in settings.</string>
     <string name="wristassist_tts_not_available">Couldn\'t connect to TTS engine.</string>
 
