--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -20,7 +20,7 @@
     <string name="wristassist_select_model">GPT Model wechseln</string>
     <string name="wristassist_select_model_message">Wähle das GPT Model für alle Chat Unterhaltungen</string>
     <string name="wristassist_total_cost">Gesamtverbrauch: %1$s k</string>
-    <string name="wristassist_reset_cost_message">Verbrauch zurücksetzen</string>
+    <string name="wristassist_reset_cost_message">Verbrauch zurückgesetzt</string>
     <string name="wristassist_okay">OK</string>
     <string name="wristassist_cancel">Abbrechen</string>
     <string name="wristassist_click_to_reveal">Klicke zum Anzeigen</string>
@@ -37,4 +37,6 @@
     <string name="wristassist_tts_not_available">Verbindung zur TTS-Engine konnte nicht hergestellt werden.</string>
     <string name="wristassist_auto_tts">Auto TTS</string>
     <string name="wristassist_auto_tts_message">Antwort automatisch laut vorlesen</string>
+    <string name="wristassist_chat_reset">Chat zurückgesetzt</string>
+    <string name="wristassist_chat_deleted">Chat gelöscht</string>
 </resources>
