--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,15 @@
     <string name="wristassist_menu_settings">Settings</string>
     <string name="wristassist_menu_about">About</string>
 
+    <string name="wristassist_click_to_reveal">Click to reveal</string>
     <string name="wristassist_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
     <string name="wristassist_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
     <string name="wristassist_invalid_api_key_message">The API key you entered is invalid. Go to the settings and check the API Key you provided.</string>
+    <string name="wristassist_chat_reset">Reset chat</string>
 
     <string name="wristassist_no_saved_chats">You haven\'t saved any chats yet.\nTouch the Save-Button in a new chat to save.</string>
+    <string name="wristassist_chat_cost" formatted="false">Chat cost:\n%1$s k</string>
+    <string name="wristassist_chat_deleted">Deleted chat</string>
 
     <string name="wristassist_change_api_key">Change API key</string>
     <string name="wristassist_no_api_key">No API key set</string>
@@ -39,8 +43,6 @@
 
     <string name="wristassist_okay">OK</string>
     <string name="wristassist_cancel">Cancel</string>
-    <string name="wristassist_click_to_reveal">Click to reveal</string>
-    <string name="wristassist_chat_cost" formatted="false">Chat cost:\n%1$s k</string>
 
     <string name="wristassist_welcome">Welcome to\nWristAssist</string>
     <string name="wristassist_welcome_info">Please scan the QR code for instructions on how to set up and use WristAssist.</string>
