--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -20,7 +20,7 @@
     <string name="wristassist_select_model">GPT Model wechseln</string>
     <string name="wristassist_select_model_message">Wähle das GPT Model für alle Chat Unterhaltungen</string>
     <string name="wristassist_total_cost">Gesamtverbrauch: %1$s k</string>
-    <string name="wristassist_reset_cost_message">Verbrauch zurückgesetzt</string>
+    <string name="wristassist_reset_cost">Verbrauch zurückgesetzt</string>
     <string name="wristassist_okay">OK</string>
     <string name="wristassist_cancel">Abbrechen</string>
     <string name="wristassist_click_to_reveal">Klicke zum Anzeigen</string>
@@ -39,4 +39,13 @@
     <string name="wristassist_auto_tts_message">Antwort automatisch laut vorlesen</string>
     <string name="wristassist_chat_reset">Chat zurückgesetzt</string>
     <string name="wristassist_chat_deleted">Chat gelöscht</string>
+    <string name="wristassist_edit_chat_title">Chat Titel ändern</string>
+    <string name="wristassist_enter_prompt">Gib eine Anweisung ein</string>
+    <string name="wristassist_prompt">Anweisung</string>
+    <string name="wristassist_enter_system_prompt">Gib eine System-Anweisung an</string>
+    <string name="wristassist_system_prompt">System-Anweisung</string>
+    <string name="wristassist_set_api_key">API Schlüssel festlegen</string>
+    <string name="wristassist_api_key">API Schlüssel</string>
+    <string name="wristassist_set_chat_title">Chat Titel festlegen</string>
+    <string name="wristassist_chat_title">Chat Titel</string>
 </resources>
