Bugfix: pawan.krd works again

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -4,21 +4,19 @@
     <string name="wristassist_menu_saved_chats">Chats</string>
     <string name="wristassist_menu_settings">Einstellungen</string>
     <string name="wristassist_menu_about">Über</string>
-    <string name="wristassist_no_internet">Verbindung zu OpenAI API fehlgeschlagen. Bitte kontrolliere deine Internet Verbindung.</string>
-    <string name="wristassist_timeout">Der Timeout von 120 Sekunden wurde erreicht. Wahrscheinlich war die Antwort sehr lang oder ChatGPT ist überlastet.</string>
+    <string name="wristassist_no_internet">Verbindung zur API fehlgeschlagen. Bitte kontrolliere deine Internet Verbindung.</string>
+    <string name="wristassist_timeout">Der Timeout von 120 Sekunden wurde erreicht. Wahrscheinlich war die Antwort sehr lang oder die API ist überlastet.</string>
     <string name="wristassist_invalid_api_key_message">Der von dir eingegebene API-Schlüssel ist ungültig. Gehe zu den Einstellungen und überprüfe den von dir angegebenen API-Schlüssel.</string>
     <string name="wristassist_no_saved_chats">Du hast noch keine Chats gespeichert.\nTippe in einem neuen Chat auf den Speichern-Button, um zu speichern.</string>
     <string name="wristassist_change_api_key">API-Schlüssel ändern</string>
     <string name="wristassist_no_api_key">Kein API-Schlüssel festgelegt</string>
     <string name="wristassist_select_api_host">API Host wechseln</string>
-    <string name="wristassist_select_api_host_message">Wähle den API Host für ChatGPT</string>
     <string name="wristassist_vibrate">Vibrieren</string>
     <string name="wristassist_vibrate_message">Vibrieren, wenn eine Antwort erscheint</string>
     <string name="wristassist_font_size">Schriftgröße</string>
     <string name="wristassist_show_cost">Verbrauch anzeigen</string>
     <string name="wristassist_show_cost_message">Verbrauch für jede Antwort anzeigen</string>
-    <string name="wristassist_select_model">GPT Model wechseln</string>
-    <string name="wristassist_select_model_message">Wähle das GPT Model für alle Chat Unterhaltungen</string>
+    <string name="wristassist_select_model">AI Model wechseln</string>
     <string name="wristassist_total_cost">Gesamtverbrauch: %1$s k</string>
     <string name="wristassist_reset_cost">Verbrauch zurückgesetzt</string>
     <string name="wristassist_okay">OK</string>
