--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="wristassist_menu_about">About</string>
 
     <string name="wristassist_click_to_reveal">Click to reveal</string>
-    <string name="wristassist_no_internet">Connection to OpenAI API failed. Please check your internet connection.</string>
-    <string name="wristassist_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or ChatGPT is overloaded.</string>
+    <string name="wristassist_no_internet">Connection to API failed. Please check your internet connection.</string>
+    <string name="wristassist_timeout">The timeout of 120 seconds was reached. Probably the answer was very long or the API is overloaded.</string>
     <string name="wristassist_invalid_api_key_message">The API key you entered is invalid. Go to the settings and check the API Key you provided.</string>
     <string name="wristassist_chat_reset">Reset chat</string>
 
@@ -18,14 +18,12 @@
     <string name="wristassist_change_api_key">Change API key</string>
     <string name="wristassist_no_api_key">No API key set</string>
     <string name="wristassist_select_api_host">Select API host</string>
-    <string name="wristassist_select_api_host_message">Select the API host for ChatGPT</string>
     <string name="wristassist_vibrate">Vibrate</string>
     <string name="wristassist_vibrate_message">Vibrate when an answer appears</string>
     <string name="wristassist_font_size">Font size</string>
     <string name="wristassist_show_cost">Show cost</string>
     <string name="wristassist_show_cost_message">Show the cost for each answer</string>
-    <string name="wristassist_select_model">Select GPT model</string>
-    <string name="wristassist_select_model_message">Select the GPT model for all chat conversations</string>
+    <string name="wristassist_select_model">Select AI model</string>
     <string name="wristassist_gpt_settings">GPT settings</string>
     <string name="wristassist_chat_settings">Chat settings</string>
     <string name="wristassist_tts_settings">TTS settings</string>
