--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -49,4 +49,7 @@
     <string name="wristassist_context_exceeded">Dein Chat ist zu lang für die KI. Bitte setze ihn zurück oder beginne einen neuen.</string>
     <string name="wristassist_quota_exceeded">Du hast dein aktuelles Kontingent überschritten. Bitte überprüfe deinen Tarif und deine Abrechnungsdetails.</string>
     <string name="wristassist_no_access">Dieses Modell gibt es nicht oder du hast keinen Zugang dazu.</string>
+    <string name="changelog_md">## Neuigkeiten  \n*Die folgenden Verbesserungen wurden seit der letzten Veröffentlichung von WristAssist hinzugefügt:*  \n</string>
+    <string name="changelog_md_22">### Version 2.4.1  \nDiese Changelog-Aktivität wurde hinzugefügt, damit du über alle kommenden Neuigkeiten informiert wirst  \n</string>
+    <string name="changelog_md_21">### Version 2.4.0  \n#### Markdown-Darstellung in Chats hinzugefügt  \nDie KI-Modelle zeigen manchmal Text in **fett**, *Kursivschrift* oder &lt;u&gt;unterstrichen&lt;/u&gt; an. Diese und andere Formatierungen werden nun korrekt angezeigt.  \n#### GPT-4 Turbo Modell hinzugefügt**  \nGPT-4 Turbo ist leistungsfähiger und kennt das Weltgeschehen bis zum April 2023. Es ist 2 bis 3 Mal günstiger als GPT-4.  \n#### Ausführlichere Fehlermeldungen  \nFehler wie zu lange Chats, Kontingent Überschreitung und ungültige Modelle werden nun korrekt angezeigt.  \n#### mehrere Fehlerbehebungen  \n</string>
 </resources>
