--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="wristassist_chat_settings">Chat settings</string>
     <string name="wristassist_tts_settings">TTS settings</string>
     <string name="wristassist_tts">TTS</string>
-    <string name="wristassist_tts_message">Read the answer out loud</string>
+    <string name="wristassist_tts_message">Read the answer out loud on tap</string>
     <string name="wristassist_tts_volume">TTS volume</string>
     <string name="wristassist_auto_tts">Auto TTS</string>
     <string name="wristassist_auto_tts_message">Automatically read the answer out loud</string>
@@ -59,4 +59,7 @@
     <string name="changelog_md">## See what\'s new  \n*The following improvements have been added since the last launch of WristAssist:*  \n</string>
     <string name="changelog_md_22">### Version 2.4.1  \nAdded this changelog activity so that you get informed about all upcoming news  \n</string>
     <string name="changelog_md_21">### Version 2.4.0  \n#### Added Markdown rendering in chats  \nThe AI models sometimes display text in **bold**, *italics* or &lt;u&gt;underlined&lt;/u&gt;. This and other formatting is now displayed correctly.  \n#### Added GPT-4 Turbo model  \nGPT-4 Turbo is more capable and has knowledge of world events up to April 2023. It is between 2 and 3 times cheaper than GPT-4.  \n#### More detailed error messages  \nErrors such as too long chats, exceeded quota and invalid models are now displayed correctly.  \n#### Several bugfixes  \n</string>
+    <string name="wristassist_no_speech_recognition">No keyboard with speech recognition installed</string>
+    <string name="wristassist_hands_free">Hands-free input</string>
+    <string name="wristassist_hands_free_message">Speech recognition for input</string>
 </resources>
