--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="wristassist_quota_exceeded">You exceeded your current quota, please check your plan and billing details.</string>
     <string name="wristassist_no_access">This model does not exist or you don\'t have access to it.</string>
     <string name="changelog_md">## See what\'s new  \n*The following improvements have been added since the last launch of WristAssist:*  \n</string>
-    <string name="changelog_md_22">### Version 2.5.0  \nAdded this changelog activity so that you get informed about all upcoming news  \n</string>
+    <string name="changelog_md_22">### Version 2.5.0  \n#### Auto voice input  \nAdded a setting to automatically open voice input in chats (saves a few clicks)  \n#### Custom API server  \nAdded a setting to choose your private OpenAI-like API server  \n#### Changelog  \nAdded this changelog activity so that you get informed about all upcoming news  \n</string>
     <string name="changelog_md_21">### Version 2.4.0  \n#### Added Markdown rendering in chats  \nThe AI models sometimes display text in **bold**, *italics* or &lt;u&gt;underlined&lt;/u&gt;. This and other formatting is now displayed correctly.  \n#### Added GPT-4 Turbo model  \nGPT-4 Turbo is more capable and has knowledge of world events up to April 2023. It is between 2 and 3 times cheaper than GPT-4.  \n#### More detailed error messages  \nErrors such as too long chats, exceeded quota and invalid models are now displayed correctly.  \n#### Several bugfixes  \n</string>
     <string name="wristassist_no_speech_recognition">No keyboard with speech recognition installed</string>
     <string name="wristassist_hands_free">Hands-free input</string>
