--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -60,4 +60,5 @@
     <string name="wristassist_invalid_host">Ungültiges URL-Format</string>
     <string name="wristassist_ai">KI</string>
     <string name="wristassist_complication_description">Komplikation zum Öffnen von WristAssist</string>
+    <string name="changelog_md_23">### Version 2.6.0  \n#### Komplikation für Watchfaces hinzugefügt  \nEine Komplikation für deine Watchfaces wurde hinzugefügt, mit der du schnell den WristAssist-Eingabebildschirm öffnen kannst.  \n#### Schnelles Scrollen  \nWenn du auf einen gespeicherten Chat-Titel klickst, wird er sofort nach unten gescrollt.  \n#### Vibration bei Fehler  \nWenn im Chat ein Fehler auftritt, spürst du jetzt eine andere Vibration.  \n</string>
 </resources>
