--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,8 @@
     <string name="wristassist_ai">AI</string>
     <string name="wristassist_complication_description">Complication to open WristAssist</string>
     <string name="changelog_md_23">### Version 2.6.0  \n#### Added watchface complication  \nAdded a complication for your watchfaces to quickly open the WristAssist input screen.  \n#### Scroll to bottom shortcut  \nIf you click on a saved chat title, it will immediately scroll to bottom.  \n#### Vibration on error  \nIf an error occurs in the chat, you will now feel a different vibration.  \n</string>
+    <string name="wristassist_tts_on">On</string>
+    <string name="wristassist_tts_off">Off</string>
+    <string name="wristassist_tts_on_auto">On + Auto read</string>
+    <string name="wristassist_tts_adapt_to_input">Adapt to input</string>
 </resources>
