--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -62,4 +62,5 @@
     <string name="wristassist_tts_off">Aus</string>
     <string name="wristassist_tts_on_auto">An + automatisch vorlesen</string>
     <string name="wristassist_tts_adapt_to_input">An Eingabemethode angepasst</string>
+    <string name="changelog_md_24">### Version 2.6.1  \n#### Weitere TTS-Einstellungen hinzugefügt  \nDie TTS-Einstellungen sind jetzt in einer einzigen Liste zusammengefasst. Du kannst wählen zwischen: Ein, Aus, Ein und Automatisch lesen und angepasst an die Eingabemethode.  \n</string>
 </resources>
